# PySqrtRootOfFour

./: LICENSE  README.md  pyproject.toml
src/pysqrtrootoffour/: __init__.py  core.py
